# POCS---ebpf-is-fun

./: .gitignore  README.md  flake.nix
POCS/ebpf-linux-api/: ebpf-linux-api.cabal
POCS/ebpf-linux-api/test/: Main.hs
aya/: .gitignore  Cargo.toml  Makefile  test.txt
aya-old-versions/socket-filters/server/: Cargo.toml
aya-old-versions/socket-filters/server/src/: main.rs
aya-templates/socket-filter/: Cargo.toml
aya-templates/socket-filter/socket-filter/src/: parser.rs
aya-templates/xdp-drop/xdp-drop-ebpf/: Cargo.toml
aya-templates/xdp-drop/xdp-drop-ebpf/src/: main.rs
aya/filters/count-filter/: Cargo.toml
aya/filters/count-filter/src/: main.rs
aya/filters/parameterized-filter/: Cargo.toml
aya/filters/parameterized-filter/src/: main.rs
aya/filters/print-filter/: Cargo.toml
aya/filters/print-filter/src/: main.rs
aya/filters/printk-filter/: Cargo.toml
aya/filters/printk-filter/src/: main.rs
aya/filters/reject-filter/src/: main.rs
aya/filters/robust-valid-command/: Cargo.toml
aya/filters/robust-valid-command/src/: main.rs
aya/filters/simple-socket-filter/: Cargo.toml
aya/filters/simple-socket-filter/src/: main.rs
aya/filters/valid-command/src/: main.rs
aya/reject-filter/: .rustc_info.json
aya/reject-filter/release/: simple-server  simple-server.d
aya/reject-filter/release/.fingerprint/allocator-api2-f848576e141a970a/: lib-allocator_api2  lib-allocator_api2.json
aya/reject-filter/release/.fingerprint/anstyle-4e2060240519d45d/: lib-anstyle  lib-anstyle.json
aya/reject-filter/release/.fingerprint/anyhow-2e03a5f8a93ea8e6/: run-build-script-build-script-build  run-build-script-build-script-build.json
aya/reject-filter/release/.fingerprint/anyhow-8aaa486b43ebc31f/: lib-anyhow  lib-anyhow.json
aya/reject-filter/release/.fingerprint/anyhow-9f7757859e8e45e1/: run-build-script-build-script-build  run-build-script-build-script-build.json
aya/reject-filter/release/.fingerprint/anyhow-d7888813368219b2/: lib-anyhow  lib-anyhow.json
aya/reject-filter/release/.fingerprint/anyhow-e16df98c1c8e44b0/: build-script-build-script-build  build-script-build-script-build.json
aya/reject-filter/release/.fingerprint/assert_matches-ff653395b96f9d5b/: lib-assert_matches  lib-assert_matches.json
aya/reject-filter/release/.fingerprint/aya-99ff2dc5bfc3b4d6/: lib-aya  lib-aya.json
aya/reject-filter/release/.fingerprint/aya-build-2d45c868a4de544d/: lib-aya_build  lib-aya_build.json
aya/reject-filter/release/.fingerprint/aya-obj-a65ddffaa7f27bae/: lib-aya_obj  lib-aya_obj.json
aya/reject-filter/release/.fingerprint/bitflags-dc613ea85a6c691d/: lib-bitflags  lib-bitflags.json
aya/reject-filter/release/.fingerprint/bytes-f38a70acf3ef191b/: lib-bytes  lib-bytes.json
aya/reject-filter/release/.fingerprint/camino-15e3ecdc823d437a/: build-script-build-script-build  build-script-build-script-build.json
aya/reject-filter/release/.fingerprint/camino-8ee34aa43972ae76/: run-build-script-build-script-build  run-build-script-build-script-build.json
aya/reject-filter/release/.fingerprint/camino-c7f069388da86615/: lib-camino  lib-camino.json
aya/reject-filter/release/.fingerprint/cargo-platform-d06c5ddcf873be51/: lib-cargo_platform  lib-cargo_platform.json
aya/reject-filter/release/.fingerprint/cargo_metadata-85055f066f18d5e7/: lib-cargo_metadata  lib-cargo_metadata.json
aya/reject-filter/release/.fingerprint/cfg-if-f7775e82f753906c/: lib-cfg_if  lib-cfg_if.json
aya/reject-filter/release/.fingerprint/clap-1d72482831ad2468/: lib-clap  lib-clap.json
aya/reject-filter/release/.fingerprint/clap_builder-13964e652a4667f9/: lib-clap_builder  lib-clap_builder.json
aya/reject-filter/release/.fingerprint/clap_derive-093f86d4a55d2ba4/: lib-clap_derive  lib-clap_derive.json
aya/reject-filter/release/.fingerprint/clap_lex-202f0c33df8beb33/: lib-clap_lex  lib-clap_lex.json
aya/reject-filter/release/.fingerprint/core-error-c20f358bc4ed7141/: lib-core_error  lib-core_error.json
aya/reject-filter/release/.fingerprint/heck-03a6889b411baa83/: lib-heck  (+1 more)
aya/server/: Cargo.toml  build.rs
aya/server/src/: main.rs
aya/server_lib/: Cargo.toml  build.rs
aya/server_lib/src/: lib.rs  parser.rs
aya/servers/benchmark-server/: Cargo.toml
aya/servers/benchmark-server/src/: main.rs
aya/servers/count-server/: Cargo.toml
aya/servers/count-server/src/: main.rs
aya/servers/ebpf-stats-server/: Cargo.toml
aya/servers/parameterized-server/: Cargo.toml
aya/servers/parameterized-server/src/: main.rs
aya/servers/print-server/: Cargo.toml
aya/servers/print-server/src/: main.rs
aya/servers/printk-server/: Cargo.toml
aya/servers/printk-server/src/: main.rs
aya/servers/simple-server/: Cargo.toml
aya/servers/simple-server/src/: main.rs
aya/simple-program/: Cargo.toml  README.md
aya/simple-program/simple-program/: Cargo.toml  build.rs
aya/simple-program/simple-program-ebpf/: Cargo.toml
aya/simple-program/simple-program-ebpf/src/: main.rs
aya/simple-program/simple-program/src/: main.rs
aya/socket-filter/: Cargo.toml  README.md
aya/socket-filter/socket-filter/: Cargo.toml  build.rs
aya/socket-filter/socket-filter-common/: Cargo.toml
aya/socket-filter/socket-filter-ebpf/: Cargo.toml
aya/socket-filter/socket-filter-ebpf/src/: main.rs
aya/socket-filter/socket-filter/src/: main.rs
aya/test/: Cargo.toml  README.md
aya/test/test/: Cargo.toml  build.rs
aya/test/test-common/: Cargo.toml
aya/test/test-ebpf/: Cargo.toml
aya/test/test-ebpf/src/: main.rs
aya/test/test/src/: main.rs
aya/valid-command/: .rustc_info.json
aya/xdp-drop/: Cargo.toml
aya/xdp-drop/xdp-drop/: build.rs
aya/xdp-drop/xdp-drop-ebpf/: Cargo.toml
aya/xdp-drop/xdp-drop/src/: main.rs
aya/xdp-log/: README.md
aya/xdp-log/xdp-log/: build.rs
aya/xdp-log/xdp-log-common/: Cargo.toml
aya/xdp-log/xdp-log-ebpf/: Cargo.toml
aya/xdp-log/xdp-log-ebpf/src/: main.rs
aya/xdp-log/xdp-log/src/: main.rs
funebpf/server-lib/: Makefile  server-lib.cabal
funebpf/server-lib/client/: Main.hs
funebpf/server-lib/printk/: Main.hs
funebpf/server-lib/snoop-filter/: Main.hs
(+159 files in other folders)
