[workspace]
resolver = "2"
members = ["socket-filter", "socket-filter-ebpf"]
default-members = ["socket-filter"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std"] }
anyhow = { version = "1", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.socket-filter-ebpf]
debug = 2
codegen-units = 1
