[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
clap = { workspace = true, features = ["derive"] }
# libc = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
simple-socket-filter = { path = "../filters/simple-socket-filter" }

[[bin]]
name = "server"
path = "src/main.rs"
