[package]
name = "xdp-drop-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
xdp-drop-common = { path = "../xdp-drop-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-drop"
path = "src/main.rs"
