[package]
name = "simple-program-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-program-common = { path = "../simple-program-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "simple-program"
path = "src/main.rs"
