[package]
name = "socket-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
# libc = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
socket-filter-ebpf = { path = "../socket-filter-ebpf" }

[[bin]]
name = "socket-filter"
path = "src/main.rs"
