[package]
name = "xdp-log-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
xdp-log-common = { path = "../xdp-log-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-log"
path = "src/main.rs"
